@@ -20,6 +20,7 @@ depth: 1
  * Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
  * Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Remove comment button on InlinePanel fields (Sage Abdullah)
+ * Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 
 ### Documentation
 
