@@ -25,6 +25,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
  * Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Remove comment button on InlinePanel fields (Sage Abdullah)
+ * Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 
 ### Documentation
 
